add image carousel

--- a/HATShaiti_visit.html
+++ b/HATShaiti_visit.html
@@ -28,11 +28,22 @@
 			<center><h2>Come Visit Us</h2></center>
 			<div id="rectangle"></div>
 		<div class="normalMargin">
-			<div class="imgStrip">
-				<img src="http://3.bp.blogspot.com/-5Ds7cni9Ok4/TdSZ_KwElFI/AAAAAAAAAD0/mDKX5MaG64M/s1600/Flag+Day+-+assembly.JPG">
-				<img src="http://3.bp.blogspot.com/-gPgWjJ-GHf8/U1Kn5GbJLwI/AAAAAAAAGv8/juJWuShaXhw/s1600/2+Fun+skipping+time.jpg">
-				<img src="http://1.bp.blogspot.com/-aDovKd1eM3M/UrzerxweAuI/AAAAAAAAFsc/tN509IQzjjk/s1600/Karen+and+children+Christmas+2013.jpg">
-			</div>
+			<div id="myCarousel" class="carousel slide">
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+  <!-- Carousel items -->
+  <div class="carousel-inner">
+    <div class="active item"></div>
+    <div class="item">…</div>
+    <div class="item">…</div>
+  </div>
+  <!-- Carousel nav -->
+  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+</div>
 		
 			<p>HATS – Haiti also encourages individuals and work teams to travel to Haiti to be a part of the work we are doing. Those who come to Haiti are given the opportunity to join in construction projects, visit in the local community, spend time with the children, and minister in church. You can help us in our work for the most needy and most vulnerable members of Haiti’s population.</p>
 			<p> You can pray for the children and the mothers who are caring for them, for Karen as missionary, and for all those who minister with her. You can come and visit us in Haiti and be transformed by seeing the need and being a part of meeting that need. And you can give financially in order that our work can move forward.</p>
