--- a/HATShaiti.html
+++ b/HATShaiti.html
@@ -3,14 +3,14 @@
 <head>
 <title> HATShaiti </title>
   <meta charset="utf-8">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>	
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
-    <link rel="stylesheet" href="css/grid.css" type="text/css" media="all">
-    <link rel="stylesheet" href="css/prettyPhoto.css" type="text/css" media="all">
-    <link rel="stylesheet" href="css/animate.css" type="text/css" media="all">
-    <script type="text/javascript" src="js/jquery.animated.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
+    <link rel="stylesheet" href="css/bootstrap-responsive.css" type="text/css" media="all">
+    <link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" media="all">
 	<script type="text/javascript" src="js/jquery-1.10.1.min.js">  </script>
-	<script type="text/javascript" src="js/website.js">  </script>
+	<script type="text/javascript" src="js/bootstrap.js">  </script>
+	
 </head>
 
 
