--- a/HATShaiti_visit.html
+++ b/HATShaiti_visit.html
@@ -5,12 +5,9 @@
   <meta charset="utf-8">
   	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
-    <link rel="stylesheet" href="css/grid.css" type="text/css" media="all">
-    <link rel="stylesheet" href="css/prettyPhoto.css" type="text/css" media="all">
-    <link rel="stylesheet" href="css/animate.css" type="text/css" media="all">
-    <script type="text/javascript" src="js/jquery.animated.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
 	<script type="text/javascript" src="js/jquery-1.10.1.min.js">  </script>
-	<script type="text/javascript" src="js/website.js">  </script>
+	<script type="text/javascript" src="js/bootstrap.js">  </script>
 </head>
 
 
@@ -28,7 +25,10 @@
 			<center><h2>Come Visit Us</h2></center>
 			<div id="rectangle"></div>
 			
-		<div id="myCarousel" class="carousel slide">
+		
+		
+		<div class="normalMargin">
+			<div id="myCarousel" class="carousel slide">
   				<ol class="carousel-indicators">
    					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     				<li data-target="#myCarousel" data-slide-to="1"></li>
@@ -62,9 +62,6 @@
   				<a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
   				<a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
 			</div>
-		
-		<div class="normalMargin">
-			
 			<p>HATS – Haiti also encourages individuals and work teams to travel to Haiti to be a part of the work we are doing. Those who come to Haiti are given the opportunity to join in construction projects, visit in the local community, spend time with the children, and minister in church. You can help us in our work for the most needy and most vulnerable members of Haiti’s population.</p>
 			<p> You can pray for the children and the mothers who are caring for them, for Karen as missionary, and for all those who minister with her. You can come and visit us in Haiti and be transformed by seeing the need and being a part of meeting that need. And you can give financially in order that our work can move forward.</p>
 		</div>	
