--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title> HATShaiti-visit </title>
   <meta charset="utf-8">
   	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
 	<script type="text/javascript" src="js/jquery-1.10.1.min.js">  </script>
@@ -21,8 +22,43 @@
 			<li id="green">Donate</li>
 			<li id="red"><a href="http://stephaniechou.com/HATShaiti.html"> About Us </a></li>
 		</div>
-		<img src="../images/haiti2013-17.jpg">
-		<img src="../images/haiti2013-123.jpg">
+			<div class="crop">	
+				<img src="../HATShaiti/images/haiti2013-123.jpg" id="smallCrop">
+				
+			</div>	
+	</panel>
+
+	<panel id="yellow">	
+		<div class="narrowMargin">
+			<center><h3> <font color="#005500">Hands Across the Sea – Haiti </font> (HATS – Haiti) is a registered Canadian charity working with <font color=#a60000> children </font>, women and families in Deschapelles, Haiti. </h3></center>
+			
+
+		</div>
+		
+	</panel>
+	<panel id="futureLeaders">
+		<div class="narrowMargin">
+			<h1>Help us raise the <font color="#005500">future leaders</font> of Haiti</h1>
+		</div>
+	</panel>
+	<panel id="yellow">
+		<div class="narrowMargin">
+			<p>
+				 Our organization is directed by Canadian Karen Huxter who has been living and ministering in the country of Haiti since 1995 and Luckner Estimable, a local lawyer, teacher and business man.
+			</p>
+			<p>
+				HATS – Haiti is overseen in Canada by the Hands Across The Sea Association, a non-profit board of directors with members from across Canada. All donations to the Hands Across the Sea Association for the mission in Haiti are tax deductible. Donated funds are forwarded to Haiti to be used for our programs and services. The board members function in a strictly volunteer capacity and we strive to keep our overhead costs low so that more of your generous donations can go to running our orphanage, school and community programs. For the 2012 – 2013 fiscal year, the overhead costs for Hands Across the Sea were less than 5%.
+			</p>
+			<p>
+				HATS – Haiti is also affiliated with another charitable organization, Education Haiti in Halifax, Nova Scotia. Education Haiti’s focus is to raise funds to enable a large number of children attend school in Haiti.
+			</p>
+			<p>
+				HATS – Haiti has an open-book financial policy. Anyone is welcome to review our financial records.
+			</p>
+
+		</div>
+
+
 	</panel>
 
 
