--- a/HATShaiti.html
+++ b/HATShaiti.html
@@ -41,5 +41,9 @@
 			<p>Hands Across the Sea also provides ongoing outreach to the wider community through practical assistance including emergency assistance, community development programs and community partnerships.</p>
 		</div>
 	<panel>
+	<div class="modal-footer">
+		<center><p>This site was created and designed by students of the University of Illinois Urbana-Champaign and Parkland College</p></center>
+	</div>
+
 </body>
 </html>
