--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -17,16 +17,19 @@
 	
 	<panel id="yellow">
 		<div id="navigation">
+			<a href="stephaniechou.com/HATShaiti_index.html"><img src="../HATShaiti/images/hats.jpg"></a>
 			<li id="brown">Contact</li>
 			<li id="red"><a href="http://stephaniechou.com/HATShaiti_visit.html" >Visit Us</a></li>
 			<li id="green">Donate</li>
 			<li id="red"><a href="http://stephaniechou.com/HATShaiti.html"> About Us </a></li>
 		</div>
+
 			<div class="crop">	
 				<img src="../HATShaiti/images/haiti2013-123.jpg" id="smallCrop">
 				
 			</div>	
 	</panel>
+
 
 	<panel id="yellow">	
 		<div class="narrowMargin">
@@ -60,7 +63,9 @@
 
 
 	</panel>
-
+	<div class="modal-footer">
+		<center><p>This site was created and designed by students of the University of Illinois Urbana-Champaign and Parkland College</p></center>
+	</div>
 
 </body>
 </html>
