--- a/HATShaiti.html
+++ b/HATShaiti.html
@@ -25,6 +25,7 @@
 			<img src="http://1.bp.blogspot.com/-aDovKd1eM3M/UrzerxweAuI/AAAAAAAAFsc/tN509IQzjjk/s1600/Karen+and+children+Christmas+2013.jpg">
 		</div>
 		<div id="navigation">
+			<a href="stephaniechou.com/HATShaiti_index.html"><img src="../HATShaiti/images/hats.jpg"></a>
 			<li id="brown">Contact</li>
 			<li id="red"><a href="http://stephaniechou.com/HATShaiti_visit.html" >Visit Us</a></li>
 			<li id="green">Donate</li>
