visit page first panel

--- a/HATShaiti_visit.html
+++ b/HATShaiti_visit.html
@@ -15,17 +15,35 @@
 
 
 <body>
-	
-	<panel id="red">
-		<div id="navigation">
+	<div id="navigation">
 			<a href="stephaniechou.com/HATShaiti_index.html"><img src="../HATShaiti/images/hats.jpg"></a>
 			<li id="brown">Contact</li>
 			<li id="red"><a href="http://stephaniechou.com/HATShaiti_visit.html" >Visit Us</a></li>
 			<li id="green">Donate</li>
 			<li id="red"><a href="http://stephaniechou.com/HATShaiti.html"> About Us </a></li>
 		</div>
-		
-			<center><h2>Come Visit Us</h2></center>
+	<panel id="planVisit">
+		<center>
+				
+				<div class="column">
+					<h1>Come Visit Us</h1>
+					<li id="col3">
+						<h2>8</h2>
+						<p>people per group</p>
+					</li>
+					<li id="col3">
+						<h2>10</h2>
+						<p>months, 1 week each month</p>
+					</li>
+					<li id="col3">
+						<h2>300</h2>
+						<p>dollars provided for food, travel and lodging</p>
+					</li>
+				</div>
+			</center>
+	</panel>
+	<panel id="red">
+
 					
 		<div class="normalMargin">
 			<div id="myCarousel" class="carousel slide">
@@ -65,24 +83,7 @@
 		</div>
 	
 		<div class="normalMargin">
-			<center>
-				<h5>Plan your Visit</h5>
-				<div class="column">
-					<li id="col3">
-						<h2>8</h2>
-						<p>people per group</p>
-					</li>
-					<li id="col3">
-						<h2>10</h2>
-						<p>months, 1 week each month</p>
-					</li>
-					<li id="col3">
-						<h2>300</h2>
-						<p>dollars provided for food, travel and lodging</p>
-					</li>
-				</div>
 
-			</center>
 			<p>HATS – Haiti also encourages individuals and work teams to travel to Haiti to be a part of the work we are doing. Those who come to Haiti are given the opportunity to join in construction projects, visit in the local community, spend time with the children, and minister in church. You can help us in our work for the most needy and most vulnerable members of Haiti’s population.</p>
 			<p> You can pray for the children and the mothers who are caring for them, for Karen as missionary, and for all those who minister with her. You can come and visit us in Haiti and be transformed by seeing the need and being a part of meeting that need. And you can give financially in order that our work can move forward.</p>
 		</div>	
