--- a/HATShaiti_about.html
+++ b/HATShaiti_about.html
@@ -26,10 +26,10 @@
 		</div>
 		<div id="navigation">
 			<a href="stephaniechou.com/HATShaiti_index.html"><img src="../HATShaiti/images/hats.jpg"></a>
-			<li id="brown">Contact</li>
+			<li id="brown"><a>Contact</a></li>
 			<li id="red"><a href="http://stephaniechou.com/HATShaiti_visit.html" >Visit Us</a></li>
-			<li id="green">Donate</li>
-			<li id="red"><a href="http://stephaniechou.com/HATShaiti.html"> About Us </a></li>
+			<li id="green"><a>Donate</a></li>
+			<li id="red"><a href="http://stephaniechou.com/HATShaiti_about.html"> About Us </a></li>
 		</div>
 		<div class="normalMargin">
 
