--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -65,20 +65,21 @@
 			<li id="red"><a href="http://stephaniechou.com/HATShaiti_about.html"> About Us </a></li>
 	</div>
 		<div class="normalMargin">
-			<center><h4> Hands Across the Sea – Haiti (HATS – Haiti) </h4></center>
+			<h3> Hands Across the Sea – Haiti (HATS – Haiti) </h3>
 			<p>
-				 We are a registered Canadian charity working with children , women and families in Deschapelles, Haiti.Our organization is directed by Canadian Karen Huxter who has been living and ministering in the country of Haiti since 1995 and Luckner Estimable, a local lawyer, teacher and business man.
+				 We are a registered Canadian charity working with children , women and families in Deschapelles, Haiti. Our organization is directed by Canadian Karen Huxter who has been living and ministering in the country of Haiti since 1995 and Luckner Estimable, a local lawyer, teacher and business man.
 			</p>
+			<h3>Donations</h3>
 			<p>
-				HATS – Haiti is overseen in Canada by the Hands Across The Sea Association, a non-profit board of directors with members from across Canada. All donations to the Hands Across the Sea Association for the mission in Haiti are tax deductible. Donated funds are forwarded to Haiti to be used for our programs and services. The board members function in a strictly volunteer capacity and we strive to keep our overhead costs low so that more of your generous donations can go to running our orphanage, school and community programs. For the 2012 – 2013 fiscal year, the overhead costs for Hands Across the Sea were less than 5%.
+				HATS – Haiti is overseen in Canada by the Hands Across The Sea Association, a non-profit board of directors with members from across Canada. All donations to the Hands Across the Sea Association for the mission in Haiti are tax deductible. Donated funds are forwarded to Haiti to be used for our programs and services. The board members function in a strictly volunteer capacity and we strive to keep our overhead costs low so that more of your generous donations can go to running our orphanage, school and community programs.
 			</p>
+			<p>	
+				For the 2012 – 2013 fiscal year, the overhead costs for Hands Across the Sea were less than 5%. HATS – Haiti has an open-book financial policy. Anyone is welcome to review our financial records.
+			</p>
+			<h3>Education Haiti</h3>
 			<p>
 				HATS – Haiti is also affiliated with another charitable organization, Education Haiti in Halifax, Nova Scotia. Education Haiti’s focus is to raise funds to enable a large number of children attend school in Haiti.
 			</p>
-			<p>
-				HATS – Haiti has an open-book financial policy. Anyone is welcome to review our financial records.
-			</p>
-
 		</div>
 
 
