a lot of changes
font changes
tinted images

--- a/HATShaiti_about.html
+++ b/HATShaiti_about.html
@@ -4,6 +4,7 @@
 <title> HATShaiti </title>
   <meta charset="utf-8">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Metrophobic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap-responsive.css" type="text/css" media="all">
