--- a/HATShaiti_visit.html
+++ b/HATShaiti_visit.html
@@ -4,6 +4,8 @@
 <title> HATShaiti-visit </title>
   <meta charset="utf-8">
   	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Metrophobic' rel='stylesheet' type='text/css'>
+
     <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap-responsive.css" type="text/css" media="all">
@@ -46,6 +48,11 @@
 
 	<panel id="black">
 		<div class="normalMargin">
+
+			<h5><font color="#fff">A Unique Opportunity</font></h5>
+			<p><font color="#fff">HATS – Haiti encourages individuals and work teams to travel to Haiti to be a part of the work we are doing. Those who come to Haiti are given the opportunity to join in construction projects, visit in the local community, spend time with the children, and minister in church. </font></p>
+			<p><font color="#fff">You can help us in our work for the most needy and most vulnerable members of Haiti’s population.</font></p>
+
 		<div id="myCarousel" class="carousel slide">
   				<ol class="carousel-indicators">
    					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -81,32 +88,19 @@
   				<a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
   				<a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
 			</div>
-		<div class="normalMargin">
-			<h3><font color="#fff">A Unique Opportunity</font></h3>
-			<p><font color="#fff">HATS – Haiti encourages individuals and work teams to travel to Haiti to be a part of the work we are doing. Those who come to Haiti are given the opportunity to join in construction projects, visit in the local community, spend time with the children, and minister in church. </font></p>
-			<p><font color="#fff">You can help us in our work for the most needy and most vulnerable members of Haiti’s population.</font></p>
 		</div>
 	</panel>
 
-
-
-
-	<panel id= "lightRed">
-		<div class="crop">	
-			<img src="../HATShaiti/images/haiti2013-123.jpg" id="smallCrop">
-		</div>	
-		<div class="normalMargin">
-			<h3>Join our Prayers</h3>
-			<p> You can pray for the children and the mothers who are caring for them, for Karen as missionary, and for all those who minister with her. You can come and visit us in Haiti and be transformed by seeing the need and being a part of meeting that need. And you can give financially in order that our work can move forward.</p>	
-			<center>
+	<panel id="prayers">
+			<div class="normalMargin">
+				<h5>Join our Prayers</h5>
+				<p> You can pray for the children and the mothers who are caring for them, for Karen as missionary, and for all those who minister with her. You can come and visit us in Haiti and be transformed by seeing the need and being a part of meeting that need. And you can give financially in order that our work can move forward.</p>	
 				<h5>Questions?</h5>
 				<p>Email Karen <a>hats.haiti@gmail.com</a></p>	
-			</center>
-		</div>
-	<panel>
-	<div class="modal-footer">
-		<center><p>This site was created and designed by students of the University of Illinois Urbana-Champaign and Parkland College</p></center>
+			</div>
 	</div>
+
+	
 	
 </body>
 </html>
