--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -48,6 +48,10 @@
 
 			<div class="btn"> Donate</div>
 
+			<h5>Our Blog</h5>
+			<p>Keep up to date with HATS-Haiti by visiting our blog.</p>
+			
+
 			<h5>Education Haiti</h5>
 			<p>
 				HATS – Haiti is also affiliated with another charitable organization, Education Haiti in Halifax, Nova Scotia. Education Haiti’s focus is to raise funds to enable a large number of children attend school in Haiti.
