--- a/HATShaiti_visit.html
+++ b/HATShaiti_visit.html
@@ -92,15 +92,17 @@
 	</panel>
 
 	<panel id="prayers">
-			<div class="normalMargin">
+		<div class="normalMargin">
 				<h5>Join our Prayers</h5>
 				<p> You can pray for the children and the mothers who are caring for them, for Karen as missionary, and for all those who minister with her. You can come and visit us in Haiti and be transformed by seeing the need and being a part of meeting that need. And you can give financially in order that our work can move forward.</p>	
 				<h5>Questions?</h5>
 				<p>Email Karen <a>hats.haiti@gmail.com</a></p>	
 			</div>
+		</div>
+	</panel>
+	<div class="modal-footer">
+		<center><p>This site was created and designed by students of the University of Illinois Urbana-Champaign and Parkland College</p></center>
 	</div>
-
-	
 	
 </body>
 </html>
