--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -46,7 +46,7 @@
 				For the 2012 – 2013 fiscal year, the overhead costs for Hands Across the Sea were less than 5%. HATS – Haiti has an open-book financial policy. Anyone is welcome to review our financial records.
 			</p>
 
-			<div class="btn"> Donate</div>
+			<button type="button" class="btn btn-primary"> <a>Donate</a></button>
 
 			<h5>Our Blog</h5>
 			<p>Keep up to date with HATS-Haiti by visiting our blog.</p>
