--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -33,7 +33,7 @@
 	<panel id="yellow">
 		
 		<div class="normalMargin">
-			<h5> Hands Across the Sea – Haiti (HATS – Haiti) </h5>
+			<h5> Hands Across the Sea – Haiti (HATS – Haiti) HELLO </h5>
 			<p>
 				 We are a registered Canadian charity working with children , women and families in Deschapelles, Haiti. Our organization is directed by Canadian Karen Huxter who has been living and ministering in the country of Haiti since 1995 and Luckner Estimable, a local lawyer, teacher and business man.
 			</p>
