--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -15,9 +15,10 @@
 
 
 <body>
+	<div class="normalMargin">
 	<div id="smallCrop"> <img src="../HATShaiti/images/haiti2013-343.jpg"></div>
 
-	<panel id="futureLeaders">
+	<panel>
 	<div id="navigation">
 			<a href="stephaniechou.com/HATShaiti_index.html"><img src="../HATShaiti/images/hats.jpg"></a>
 			<li id="brown"><a>Contact</a></li>
@@ -25,15 +26,13 @@
 			<li id="green"><a>Donate</a></li>
 			<li id="red"><a href="http://stephaniechou.com/HATShaiti_about.html"> About Us </a></li>
 		</div>
-		<div class="normalMargin">
 			<h1>Help us raise the <font color="#005500">future leaders</font> of Haiti</h1>
-		</div>
 	</panel>		
 	
 	<panel id="yellow">
 		
 		<div class="normalMargin">
-			<h5> Hands Across the Sea – Haiti (HATS – Haiti) HELLO </h5>
+			<h5> Hands Across the Sea – Haiti (HATS – Haiti)</h5>
 			<p>
 				 We are a registered Canadian charity working with children , women and families in Deschapelles, Haiti. Our organization is directed by Canadian Karen Huxter who has been living and ministering in the country of Haiti since 1995 and Luckner Estimable, a local lawyer, teacher and business man.
 			</p>
@@ -57,12 +56,12 @@
 				HATS – Haiti is also affiliated with another charitable organization, Education Haiti in Halifax, Nova Scotia. Education Haiti’s focus is to raise funds to enable a large number of children attend school in Haiti.
 			</p>
 		</div>
-
-
 	</panel>
 	<div class="modal-footer">
 		<center><p>This site was created and designed by students of the University of Illinois Urbana-Champaign and Parkland College</p></center>
 	</div>
+</div>
+
 
 </body>
 </html>
