--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -26,7 +26,9 @@
 			<li id="green"><a>Donate</a></li>
 			<li id="red"><a href="http://stephaniechou.com/HATShaiti_about.html"> About Us </a></li>
 		</div>
-			<h1>Help us raise the <font color="#005500">future leaders</font> of Haiti</h1>
+		<div class="normalMargin">
+			<h3>Help us raise the <font color="#005500">future leaders</font> of Haiti</h3>
+		</div>
 	</panel>		
 	
 	<panel id="yellow">
