text style changes

--- a/HATShaiti_about.html
+++ b/HATShaiti_about.html
@@ -4,7 +4,7 @@
 <title> HATShaiti </title>
   <meta charset="utf-8">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Metrophobic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap-responsive.css" type="text/css" media="all">
@@ -17,7 +17,7 @@
 
 
 <body>
-	
+	<div class="normalMargin">
 	<panel id="yellow">
 	
 		<div class="imgStrip">
@@ -36,7 +36,7 @@
 
 			<h3>About Us</h3>
 			<h5>Hands Across the Sea – Haiti</h5>
-			<p>Hands Across the Sea – Haiti (HATS-Haiti) is a non-profit organization serving needy children and families in Deschappelles, Haiti. This interdenominational Christian ministry is comprised of a children’s home, a school from preschool – grade 9, and community development initiatives. </p>
+			<p>Hands Across the Sea – Haiti (HATS-Haiti) is a non-profit organization serving needy children and families in Deschappelles, Haiti. This interdenominational Christian ministry is comprised of a children’s home, a school from preschool – grade 9, and community development initiatives. Our organization is directed by Canadian Karen Huxter who has been living and ministering in the country of Haiti since 1995 and Luckner Estimable, a local lawyer, teacher and business man. </p>
 			<h5>Children's Home</h5>
 			<p>The Hands Across the Sea children’s home has 14 children in full-time care, ranging in age from 1-17 years, who are cared for in a loving family-style arrangement. We are ready to accept new orphans as the need arises in the community. In addition to caring for children in our children’s home, we provide support to needy children and their families in the community in order to maintain the family unit whenever possible. By providing financial support, food aid and school sponsorship, we can help families care for their orphaned nieces, nephews, cousins, or siblings.</p>
 			<h5>Community Outreach</h5>
@@ -46,6 +46,7 @@
 	<div class="modal-footer">
 		<center><p>This site was created and designed by students of the University of Illinois Urbana-Champaign and Parkland College</p></center>
 	</div>
+</div>
 	
 </body>
 </html>
