--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Metrophobic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
 	<script type="text/javascript" src="js/jquery-1.10.1.min.js">  </script>
@@ -27,7 +27,7 @@
 			<li id="red"><a href="http://stephaniechou.com/HATShaiti_about.html"> About Us </a></li>
 		</div>
 		<div class="normalMargin">
-			<h3>Help us raise the <font color="#005500">future leaders</font> of Haiti</h3>
+			<h4>Help us raise the <font color="#005500">future leaders</font> of Haiti</h4>
 		</div>
 	</panel>		
 	
@@ -36,9 +36,9 @@
 		<div class="normalMargin">
 			<h5> Hands Across the Sea – Haiti (HATS – Haiti)</h5>
 			<p>
-				 We are a registered Canadian charity working with children , women and families in Deschapelles, Haiti. Our organization is directed by Canadian Karen Huxter who has been living and ministering in the country of Haiti since 1995 and Luckner Estimable, a local lawyer, teacher and business man.
+				 We are a registered Canadian charity working with children , women and families in Deschapelles, Haiti. 
 			</p>
-			<h5>Donations</h5>
+			<h5>Donate Today</h5>
 			<p>
 				HATS – Haiti is overseen in Canada by the Hands Across The Sea Association, a non-profit board of directors with members from across Canada. All donations to the Hands Across the Sea Association for the mission in Haiti are tax deductible. Donated funds are forwarded to Haiti to be used for our programs and services. The board members function in a strictly volunteer capacity and we strive to keep our overhead costs low so that more of your generous donations can go to running our orphanage, school and community programs.
 			</p>
