navigation is broken. added vision

--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -8,6 +8,7 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
+
 	<script type="text/javascript" src="js/jquery-1.10.1.min.js">  </script>
 	<script type="text/javascript" src="js/bootstrap.js">  </script>
 </head>
@@ -15,22 +16,52 @@
 
 
 <body>
+
+<!-- Fixed navbar -->
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">HATS-Haiti</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a>About</a></li>
+            <li><a>Donate </a></li>
+            <li><a> Visit</a></li>
+            <li><a>Contact </a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+
 	<div class="normalMargin">
 
 	<panel id="video">hello
 
 		<h1>video goes here</h1>
 	</panel>
+   
+	<!--
 	<panel id="navigation">
 			<a href="stephaniechou.com/HATShaiti_index.html"><img src="../HATShaiti/images/hats.jpg"></a>
-			<li id="brown"><a>Contact</a></li>
-			<li id="red"><a href="http://stephaniechou.com/HATShaiti_visit.html" >Visit Us</a></li>
-			<li id="green"><a>Donate</a></li>
-			<li id="red"><a href="http://stephaniechou.com/HATShaiti_about.html"> About Us </a></li>
+			<li><a>Contact</a></li>
+			<li><a href="http://stephaniechou.com/HATShaiti_visit.html" >Visit Us</a></li>
+			<li><a>Donate</a></li>
+			<li><a href="http://stephaniechou.com/HATShaiti_about.html"> About Us </a></li>
 	</panel>
+
+-->
 	<panel id="futureLeaders">	
 		<div class="normalMargin">
-			<h4>Help us raise the <font color="#005500">future leaders</font> of Haiti</h4>
+			<h6>Hands Across the Sea beleives that children are the key to Haiti's future. Through education, children will become leaders in their families, in their communities and in their country.</h6>
 		</div>
 	</panel>		
 	
