--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -5,11 +5,8 @@
   <meta charset="utf-8">
   	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
-<<<<<<< HEAD
-	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-=======
+
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
->>>>>>> adb8c6a29fda06bab1b36d10a7af03c018379e55
     <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
 
@@ -21,29 +18,7 @@
 
 <body>
 
-<!-- Fixed navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">HATS-Haiti</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a>About</a></li>
-            <li><a>Donate </a></li>
-            <li><a> Visit</a></li>
-            <li><a>Contact </a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+
 
 
 	<div class="normalMargin">
@@ -65,7 +40,7 @@
 -->
 	<panel id="futureLeaders">	
 		<div class="normalMargin">
-			<h6>Hands Across the Sea beleives that children are the key to Haiti's future. Through education, children will become leaders in their families, in their communities and in their country.</h6>
+			<h6>Hands Across the Sea believes that children are the key to Haiti's future. Through education, children will become leaders in their families, in their communities and in their country.</h6>
 		</div>
 	</panel>		
 	
