--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -40,7 +40,7 @@
 -->
 	<panel id="futureLeaders">	
 		<div class="normalMargin">
-			<h6>Hands Across the Sea believes that children are the key to Haiti's future. Through education, children will become leaders in their families, in their communities and in their country.</h6>
+			<h5><font color="#fff">Hands Across the Sea believes that children are the key to Haiti's future. Through education, children will become leaders in their families, in their communities and in their country.</font></h5>
 		</div>
 	</panel>		
 	
