bootstrap USE THIS VERSION

--- a/test.html
+++ b/test.html
@@ -6,6 +6,10 @@
 
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="all">
+    <link rel="stylesheet" href="css/bootstrap-responsive.css" type="text/css" media="all">
+    <link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" media="all">
+    <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
 
 	<script type="text/javascript" src="js/jquery-1.10.1.min.js">  </script>
 	<script type="text/javascript" src="js/bootstrap.js">  </script>
@@ -25,7 +29,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <a class="navbar-brand"> <img src="../HATShaiti/images/hats.jpg"></a>
           <a class="navbar-brand" href="#">HATS-Haiti</a>
+
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
