--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -18,7 +18,30 @@
 
 <body>
 
-
+<!-- Fixed navbar -->
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand"> <img src="../HATShaiti/images/hats.jpg"></a>
+          <a class="navbar-brand" href="#">HATS-Haiti</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a>About</a></li>
+            <li><a>Donate </a></li>
+            <li><a> Visit</a></li>
+            <li><a>Contact </a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
 
 
 	<div class="normalMargin">
