--- a/HATShaiti_about.html
+++ b/HATShaiti_about.html
@@ -17,6 +17,30 @@
 
 
 <body>
+	<!-- Fixed navbar -->
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand"> <img src="../HATShaiti/images/hats.jpg"></a>
+          <a class="navbar-brand" href="#">HATS-Haiti</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a>About</a></li>
+            <li><a>Donate </a></li>
+            <li><a> Visit</a></li>
+            <li><a>Contact </a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
 	<div class="normalMargin">
 	<panel id="yellow">
 	
@@ -25,13 +49,7 @@
 			<img src="http://3.bp.blogspot.com/-gPgWjJ-GHf8/U1Kn5GbJLwI/AAAAAAAAGv8/juJWuShaXhw/s1600/2+Fun+skipping+time.jpg">
 			<img src="http://1.bp.blogspot.com/-aDovKd1eM3M/UrzerxweAuI/AAAAAAAAFsc/tN509IQzjjk/s1600/Karen+and+children+Christmas+2013.jpg">
 		</div>
-		<div id="navigation">
-			<a href="stephaniechou.com/HATShaiti_index.html"><img src="../HATShaiti/images/hats.jpg"></a>
-			<li id="brown"><a>Contact</a></li>
-			<li id="red"><a href="http://stephaniechou.com/HATShaiti_visit.html" >Visit Us</a></li>
-			<li id="green"><a>Donate</a></li>
-			<li id="red"><a href="http://stephaniechou.com/HATShaiti_about.html"> About Us </a></li>
-		</div>
+
 		<div class="normalMargin">
 
 			<h3>About Us</h3>
