brown bg and white text

--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -82,8 +82,8 @@
 	<panel id="blog">
 		<div class="normalMargin">
 
-			<h5>Keep Up with Blog</h5>
-			<p>Keep up to date with HATS-Haiti by visiting our blog. We update it regularly.</p>
+			<h5><font color="#fff">Keep Up with Blog</font></h5>
+			<p><font color="#fff">Keep up to date with HATS-Haiti by visiting our blog. We update it regularly.</font></p>
 
 		</div>
 	</panel>
