comment out bootstrap header font stuff

--- a/HATShaiti_visit.html
+++ b/HATShaiti_visit.html
@@ -106,7 +106,7 @@
                       <p>more descriptions!</p>
                     </div>
     			</div>
-
+    		</div>
   		<!-- Controls -->
   		<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
     		<span class="glyphicon glyphicon-chevron-left"></span>
