--- a/HATShaiti_about.html
+++ b/HATShaiti_about.html
@@ -53,18 +53,48 @@
 		<div class="normalMargin">
 
 			<h3>About Us</h3>
-			<h5>Hands Across the Sea – Haiti</h5>
-			<p>Hands Across the Sea – Haiti (HATS-Haiti) is a non-profit organization serving needy children and families in Deschappelles, Haiti. This interdenominational Christian ministry is comprised of a children’s home, a school from preschool – grade 9, and community development initiatives. Our organization is directed by Canadian Karen Huxter who has been living and ministering in the country of Haiti since 1995 and Luckner Estimable, a local lawyer, teacher and business man. </p>
-			<h5>Children's Home</h5>
-			<p>The Hands Across the Sea children’s home has 14 children in full-time care, ranging in age from 1-17 years, who are cared for in a loving family-style arrangement. We are ready to accept new orphans as the need arises in the community. In addition to caring for children in our children’s home, we provide support to needy children and their families in the community in order to maintain the family unit whenever possible. By providing financial support, food aid and school sponsorship, we can help families care for their orphaned nieces, nephews, cousins, or siblings.</p>
-			<h5>Community Outreach</h5>
-			<p>Hands Across the Sea also provides ongoing outreach to the wider community through practical assistance including emergency assistance, community development programs and community partnerships.</p>
+			<p>Hands Across the Sea – Haiti (HATS – Haiti) is a registered non-profit Canadian organization working with children, women and families in Deschapelles, Haiti. It provides ongoing outreach to the wider community through practical assistance including emergency assistance, community development programs and community partnerships.</p>
+
+<h5>What We Do</h5>
+<p>HATS-Haiti is involved in the local community with several varied programs that change to meet needs as they arise. Ongoing programs include the children’s home, school, Sunday School and regular appearances on Radio Creole by visiting workers. Other programs include chicken and goat donations, cholera vaccine, food packages and or financial help as needs demand and resources are available.</p>
+
+<h5>Children’s home</h5>
+<p>The Hands Across the Sea children’s home has 14 children in full-time care, ranging in age from 1-17 years, who are cared for in a loving family-style arrangement. We are ready to accept new orphans as the need arises in the community. By providing financial support, food aid and school sponsorship, we can help families care for their orphaned nieces, nephews, cousins, or siblings.</p>
+
+<h5>School</h5>
+<p>Our co-ed school provides quality education for preschool – grade 9 with qualified Haitian teachers. Our school has an excellent reputation in the community and we are proud of our exceptional student success rate.</p>
+<center><button type="button" class="btn btn-primary"> <a>Donate</a></button></center>
+
+<h5>Community Outreach</h5>
+<p>Hands Across the Sea provides ongoing outreach to the wider community through practical assistance including emergency assistance, community development programs and community partnerships.</p>
+
+<p>Our community outreach includes providing financial aid and nutritional support for families in great need, clothing distribution, and assistance in covering medical costs at the nearby hospital for families in crisis. We work in collaboration with local churches and we support local organizations and initiatives whenever possible. To combat rising malnutrition rates in the Artibonite Valley, we are currently providing nutritional support to hungry families through the distribution of rice, beans and oil. As part of our ongoing community outreach, we help widows and the elderly who have little or no family support.</p>
+
+
+
+<h5>Director</h5>
+<p>Karen Huxter, the founder and Director of Hands Across the Sea, was born in Springdale, Newfoundland and is proud of her Newfie roots and heritage. She lived in various places across Canada such as Quebec, the Yukon, Ontario and BC before moving to Haiti in 1995. In her professional career, Karen worked in banking and administration and did extensive volunteer work with community groups and charities. A mother of two grown daughters, one young adopted son and seven grandchildren, Karen is energetic and passionate about the work in Haiti. She loves each of the children and has a heart of compassion for children, women and families in the country of Haiti.</p>
+
+<h5>Asst’ Director</h5>
+<p>Luckner Estimable, Assistant Director of Hands Across the Sea since 2005, is a man of integrity who was born, raised and educated in Haiti. An educator for more than 20 years, Luckner was previously in charge of outlying schools, including in the mountain areas, for the Haitian government. He studied law and was practicing as a lawyer in the Artibonite Valley when he joined HATS-Haiti. In addition to his role as Assistant Director of our organization, Luckner is Director of the HATS school IMKH. Luckner also oversees the security of the mission and all construction, electrical and plumbing work. He is also the owner and operator of a Christian Radio Station – Radio Creole 104.7 F.M.</p>
+
+<h5>Staff</h5>
+<p>Local people fill many day to day operational positions like:</p>
+<li>House mothers</li> 
+<li>Cooks and cleaners</li>
+<li>Laundry workers</li>
+<li>Maintenance</li>
+<li>Yard maintenance</li> 
+<li>Security</li>
+<li>Teachers </li>
+
+<h5>Finances</h5>
+<p>Our funding is completely by donation with less than 5% going to operating the charity. HATS – Haiti has an open-book financial policy. Anyone is welcome to review our financial records.</p>
+
 		</div>
-	<panel>
-	<div class="modal-footer">
+	</panel>
 		<center><p>This site was created and designed by students of the University of Illinois Urbana-Champaign and Parkland College</p></center>
 	</div>
-</div>
 	
 </body>
 </html>
