added donate page

--- a/HATShaiti_about.html
+++ b/HATShaiti_about.html
@@ -93,7 +93,10 @@
 
 		</div>
 	</panel>
-		<center><p>This site was created and designed by students of the University of Illinois Urbana-Champaign and Parkland College</p></center>
+
+	<div class="footer">
+		<p>This site was created and designed by students of the University of Illinois Urbana-Champaign and Parkland College</p>
+	</div>	
 	</div>
 	
 </body>
