Edited spaces between paragraphs in Partnerships

--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -92,9 +92,7 @@
 		<div class="normalMargin">
 			<h5> Partnerships</h5>
 			<p>HATS – Haiti is overseen in Canada by the Hands Across The Sea Association, a non-profit board of directors with members from across Canada.</p>
-			<p>
-				HATS – Haiti is also affiliated with another charitable organization, Education Haiti in Halifax, Nova Scotia. Education Haiti’s focus is to raise funds to enable a large number of children attend school in Haiti.
-			</p>
+			<p>HATS – Haiti is also affiliated with another charitable organization, Education Haiti in Halifax, Nova Scotia. Education Haiti’s focus is to raise funds to enable a large number of children attend school in Haiti.</p>
 		</div>
 	</panel>
 		
