Edited text in Blog

--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -83,7 +83,7 @@
 		<div class="normalMargin">
 
 			<h5><font color="#000">Keep Up with Blog</font></h5>
-			<p><font color="#000">Keep up to date with HATS-Haiti by visiting our blog. We update it regularly.</font></p>
+			<p><font color="#000">Keep up to date with HATS-Haiti by visiting our blog.</font></p>
 
 		</div>
 	</panel>
