change yellow background to better color

--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -63,7 +63,7 @@
 -->
 	<panel id="futureLeaders">	
 		<div class="normalMargin">
-			<h5><font color="#000">Hands Across the Sea believes that children are the key to Haiti's future. Through education, children will become leaders in their families, in their communities and in their country.</font></h5>
+			<h5>Hands Across the Sea believes that children are the key to Haiti's future. Through education, children will become leaders in their families, in their communities and in their country.</h5>
 		</div>
 	</panel>		
 	
@@ -82,8 +82,8 @@
 	<panel id="blog">
 		<div class="normalMargin">
 
-			<h5><font color="#000">Keep Up with Blog</font></h5>
-			<p><font color="#000">Keep up to date with HATS-Haiti by visiting our blog. We update it regularly.</font></p>
+			<h5>Keep Up with Our Blog</h5>
+			<p>Keep up to date with HATS-Haiti by visiting our blog. We update it regularly.</p>
 
 		</div>
 	</panel>
