Edited titles Blog and Partnerships

--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -82,7 +82,7 @@
 	<panel id="blog">
 		<div class="normalMargin">
 
-			<h5><font color="#000">Keep Up with Blog</font></h5>
+			<h5><font color="#000">Keep Up With Us</font></h5>
 			<p><font color="#000">Keep up to date with HATS-Haiti by visiting our blog.</font></p>
 
 		</div>
@@ -90,7 +90,7 @@
 
 	<panel id="partnerships">
 		<div class="normalMargin">
-			<h5> Partnerships</h5>
+			<h5> Meet Our Partnerships</h5>
 			<p>HATS – Haiti is overseen in Canada by the Hands Across The Sea Association, a non-profit board of directors with members from across Canada.</p>
 			<p>HATS – Haiti is also affiliated with another charitable organization, Education Haiti in Halifax, Nova Scotia. Education Haiti’s focus is to raise funds to enable a large number of children attend school in Haiti.</p>
 		</div>
