start adding collapsable

--- a/HATShaiti_about.html
+++ b/HATShaiti_about.html
@@ -54,9 +54,23 @@
 
 			<h3>About Us</h3>
 			<p>Hands Across the Sea – Haiti (HATS – Haiti) is a registered non-profit Canadian organization working with children, women and families in Deschapelles, Haiti. It provides ongoing outreach to the wider community through practical assistance including emergency assistance, community development programs and community partnerships.</p>
+			<div class="panel-group" id="accordion">
+  				<div class="panel panel-default">
+    				<div class="panel-heading">
+      					<h4 class="panel-title">
+        				<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+          					What We Do
+        				</a>
+      					</h4>
+    				</div>
+    			<div id="collapseOne" class="panel-collapse collapse in">
+      		<div class="panel-body">
 
-<h5>What We Do</h5>
 <p>HATS-Haiti is involved in the local community with several varied programs that change to meet needs as they arise. Ongoing programs include the children’s home, school, Sunday School and regular appearances on Radio Creole by visiting workers. Other programs include chicken and goat donations, cholera vaccine, food packages and or financial help as needs demand and resources are available.</p>
+      </div>
+    </div>
+  </div>
+
 
 <h5>Children’s home</h5>
 <p>The Hands Across the Sea children’s home has 14 children in full-time care, ranging in age from 1-17 years, who are cared for in a loving family-style arrangement. We are ready to accept new orphans as the need arises in the community. By providing financial support, food aid and school sponsorship, we can help families care for their orphaned nieces, nephews, cousins, or siblings.</p>
