Edited text in Donate Today

--- a/HATShaiti_index.html
+++ b/HATShaiti_index.html
@@ -73,7 +73,7 @@
 
 			<h5>Donate Today</h5>
 			<p>
-				All donations to the Hands Across the Sea Association for the mission in Haiti are tax deductible. Donated funds are forwarded to Haiti to be used for our programs and services. </p>
+				All donations to the Hands Across the Sea Association for the mission in Haiti are tax deductible. The board members function in a strictly volunteer capacity and we strive to keep our overhead costs low so that more of your generous donations can go to running our orphanage, school and community programs.</p>
 			<center><button type="button" class="btn btn-primary"> <a>Donate</a></button></center>
 			
 		</div>
