--- a/HATShaiti_visit.html
+++ b/HATShaiti_visit.html
@@ -46,24 +46,22 @@
     	<div class="normalMargin">
 		<panel id="planVisit">
 			
-		<center>
-				<div class="column">
-					<h1><font color="#fff">Come Visit Us</font></h1>
-					<h5><font color="#fff">Be part of the story</font></h5>
-					<li id="col3">
-						<h2><font color="#fff">8</font></h2>
-						<p><font color="#fff">people per group</font></p>
-					</li>
-					<li id="col3">
-						<h2><font color="#fff">10</font></h2>
-						<p><font color="#fff">months, one week each month</font></p>
-					</li>
-					<li id="col3">
-						<h2><font color="#fff">300</font></h2>
-						<p><font color="#fff">dollars provided for food, travel and lodging</font></p>
-					</li>
-				</div>
-			</center>
+		<div class="normalMargin">
+
+			<h2><font color="#fff">Come Visit Us</font></h2>
+			<h5><font color="#fff">Be part of the story</font></h5>
+			<div class="row">
+  				<div class="col-md-4">
+  					<h2><font color="#fff">8</font></h2>
+					<p><font color="#fff">people per group</font></p></div>
+  				<div class="col-md-4">
+  					<h2><font color="#fff">10</font></h2>
+					<p><font color="#fff">months, one week each month</font></p></div>
+  				<div class="col-md-4">
+  					<h2><font color="#fff">300</font></h2>
+					<p><font color="#fff">dollars provided for food, travel and lodging</font></p></div>
+			</div>
+		</div>
 	</panel>
 	
 	<panel id="black">
