--- a/HATShaiti_about.html
+++ b/HATShaiti_about.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+	    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+
     <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap-responsive.css" type="text/css" media="all">
@@ -48,7 +50,7 @@
 	<div class="normalMargin">
 	<panel id="about">
 		<div class="normalMargin">
-    			<h3>About Us</h3>
+    			<h2>About Us</h2>
 				<p>Hands Across the Sea – Haiti (HATS – Haiti) is a registered non-profit Canadian organization working with children, women and families in Deschapelles, Haiti. It provides ongoing outreach to the wider community through practical assistance including emergency assistance, community development programs and community partnerships.</p>
 		</div>
 	</panel>
