fixed collapse in the about

--- a/HATShaiti_about.html
+++ b/HATShaiti_about.html
@@ -9,8 +9,7 @@
 
     <link rel="stylesheet" href="css/HATSstyle.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
-    <link rel="stylesheet" href="css/bootstrap-responsive.css" type="text/css" media="all">
-    <link rel="stylesheet" href="css/bootstrap-responsive.min.css" type="text/css" media="all">
+
 	<script type="text/javascript" src="js/jquery-1.10.1.min.js">  </script>
 	<script type="text/javascript" src="js/bootstrap.js">  </script>
 	
@@ -81,12 +80,12 @@
   				<div class="panel panel-default">
     				<div class="panel-heading">
       					<h4 class="panel-title">
-        				<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+        				<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
           					Children's Home
         				</a>
       					</h4>
     				</div>
-    				<div id="collapseOne" class="panel-collapse collapse in">
+    				<div id="collapseTwo" class="panel-collapse collapse in">
       					<div class="panel-body">
 The Hands Across the Sea children’s home has 14 children in full-time care, ranging in age from 1-17 years, who are cared for in a loving family-style arrangement. We are ready to accept new orphans as the need arises in the community. By providing financial support, food aid and school sponsorship, we can help families care for their orphaned nieces, nephews, cousins, or siblings.
       					</div>
@@ -98,12 +97,12 @@ The Hands Across the Sea children’s home has 14 children in full-time care, ra
   				<div class="panel panel-default">
     				<div class="panel-heading">
       					<h4 class="panel-title">
-        				<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+        				<a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
           					School
         				</a>
       					</h4>
     				</div>
-    				<div id="collapseOne" class="panel-collapse collapse in">
+    				<div id="collapseThree" class="panel-collapse collapse in">
       					<div class="panel-body">
 Our co-ed school provides quality education for preschool – grade 9 with qualified Haitian teachers. Our school has an excellent reputation in the community and we are proud of our exceptional student success rate.
 <center><button type="button" class="btn btn-primary"> <a>Donate</a></button></center>
@@ -116,12 +115,12 @@ Our co-ed school provides quality education for preschool – grade 9 with quali
   				<div class="panel panel-default">
     				<div class="panel-heading">
       					<h4 class="panel-title">
-        				<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+        				<a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
           					Community Outreach
         				</a>
       					</h4>
     				</div>
-    				<div id="collapseOne" class="panel-collapse collapse in">
+    				<div id="collapseFour" class="panel-collapse collapse in">
       					<div class="panel-body">
 Hands Across the Sea provides ongoing outreach to the wider community through practical assistance including emergency assistance, community development programs and community partnerships.
 
@@ -135,12 +134,12 @@ Our community outreach includes providing financial aid and nutritional support 
   				<div class="panel panel-default">
     				<div class="panel-heading">
       					<h4 class="panel-title">
-        				<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+        				<a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
           					Director
         				</a>
       					</h4>
     				</div>
-    				<div id="collapseOne" class="panel-collapse collapse in">
+    				<div id="collapseFive" class="panel-collapse collapse in">
       					<div class="panel-body">
 Karen Huxter, the founder and Director of Hands Across the Sea, was born in Springdale, Newfoundland and is proud of her Newfie roots and heritage. She lived in various places across Canada such as Quebec, the Yukon, Ontario and BC before moving to Haiti in 1995. In her professional career, Karen worked in banking and administration and did extensive volunteer work with community groups and charities. A mother of two grown daughters, one young adopted son and seven grandchildren, Karen is energetic and passionate about the work in Haiti. She loves each of the children and has a heart of compassion for children, women and families in the country of Haiti.
       					</div>
@@ -152,12 +151,12 @@ Karen Huxter, the founder and Director of Hands Across the Sea, was born in Spri
   				<div class="panel panel-default">
     				<div class="panel-heading">
       					<h4 class="panel-title">
-        				<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+        				<a data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
           					Asst'Director
         				</a>
       					</h4>
     				</div>
-    				<div id="collapseOne" class="panel-collapse collapse in">
+    				<div id="collapseSix" class="panel-collapse collapse in">
       					<div class="panel-body">
 Luckner Estimable, Assistant Director of Hands Across the Sea since 2005, is a man of integrity who was born, raised and educated in Haiti. An educator for more than 20 years, Luckner was previously in charge of outlying schools, including in the mountain areas, for the Haitian government. He studied law and was practicing as a lawyer in the Artibonite Valley when he joined HATS-Haiti. In addition to his role as Assistant Director of our organization, Luckner is Director of the HATS school IMKH. Luckner also oversees the security of the mission and all construction, electrical and plumbing work. He is also the owner and operator of a Christian Radio Station – Radio Creole 104.7 F.M.
       					</div>
@@ -168,12 +167,12 @@ Luckner Estimable, Assistant Director of Hands Across the Sea since 2005, is a m
   				<div class="panel panel-default">
     				<div class="panel-heading">
       					<h4 class="panel-title">
-        				<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+        				<a data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">
           					Staff
         				</a>
       					</h4>
     				</div>
-    				<div id="collapseOne" class="panel-collapse collapse in">
+    				<div id="collapseSeven" class="panel-collapse collapse in">
       					<div class="panel-body">
 Local people fill many day to day operational positions like:
 House mothers, 
@@ -187,21 +186,22 @@ Teachers
       					</div>
     				</div>
   				</div>
-<div class="panel-group" id="accordion">
+			<div class="panel-group" id="accordion">
   				<div class="panel panel-default">
     				<div class="panel-heading">
       					<h4 class="panel-title">
-        				<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+        				<a data-toggle="collapse" data-parent="#accordion" href="#collapseEight">
           					Finances
         				</a>
       					</h4>
     				</div>
-    				<div id="collapseOne" class="panel-collapse collapse in">
+    				<div id="collapseEight" class="panel-collapse collapse in">
       					<div class="panel-body">
 Our funding is completely by donation with less than 5% going to operating the charity. HATS – Haiti has an open-book financial policy. Anyone is welcome to review our financial records.
       					</div>
     				</div>
   				</div>
+  			</div>
 		</div>
 	</panel>
 
